# patrick-beeson-SDK

./: .env.dev  .env.test  .gitignore  README.md  design.md  pyproject.toml  requirements.txt
api_utils/: api_requester.py  mixins.py
api_utils/Abstract/: content_type.py
rest/: __init__.py
rest/movie/: __init__.py
rest/quote/: __init__.py
src/lord_of_the_rings_sdk/api_utils/: api_requester.py  mixins.py
src/lord_of_the_rings_sdk/api_utils/Abstract/: content_type.py
src/lord_of_the_rings_sdk/exceptions/: api_exception.py
src/lord_of_the_rings_sdk/rest/: __init__.py
src/lord_of_the_rings_sdk/rest/movie/: __init__.py
src/lord_of_the_rings_sdk/rest/quote/: __init__.py
src/lord_of_the_rings_sdk/tests/: test_api_requester.py  test_mixins.py  test_rest_client.py
src/lotr_sdk.egg-info/: PKG-INFO  SOURCES.txt
src/lotr_sdk_patrick_beeson.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_api_requester.py  test_mixins.py  test_rest_client.py
