[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lotr_sdk_patrick_beeson"
version = "0.0.1"
authors = [
  { name="Patrick Beeson", email="patrickbeeson@gmail.com" },
]
description = "SDK for Lord of the Rings API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]